# toutiao

./: .env  .gitignore  README.md  indexer.py  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_spider.py  头条项目面试问答.md
.codex/environments/: environment.toml
.github/: CODEOWNERS  pull_request_template.md
agents/: __init__.py  graph.py  services.py  state.py
cache/: __init__.py  constants.py  local_cache.py  multi_level_cache.py  redis_cache.py
client/: index.html  package-lock.json  package.json
configs/: __init__.py  celery.py  celery_conf.py  db.py  db_conf.py  news_spider_conf.py  redis.py  redis_conf.py  settings.py
crud/: __init__.py  favorite.py  history.py  news.py  news_spider.py  users.py
docs/: LLM_AGENT_RAG_PROPOSAL.md  project-status.txt
middlewares/: __init__.py  celery.py  rate_limit.py  token_bucket_middleware.py  token_bucket_rate_limit.py
models/: __init__.py  base.py  favorite.py  history.py  news.py  users.py
rag/: __init__.py  embeddings.py  indexer.py  vectorstore.py
routers/: __init__.py  chat.py  favorite.py  history.py  news.py  users.py
schemas/: __init__.py  base.py  chat.py  favorite.py  history.py  users.py
services/: news_spider.py
tasks/: __init__.py  news_spider_tasks.py  news_tasks.py  statistics_tasks.py
tests/: __init__.py  conftest.py  test_cache.py  test_chat.py  test_favorite.py  test_history.py  test_news.py  test_users.py
utils/: auth.py  exception.py  exception_handlers.py  logger.py  repr_return.py  response.py  security.py  singleflight.py
(+62 files in other folders)
